<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AppCompat"
    android:padding="16dp"
    tools:context=".ui.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="385dp"
        android:layout_height="78dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tv_register"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <com.example.jualbukuid.customview.CustomEditText
        android:id="@+id/et_name_register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:hint="@string/masukan_nama_anda"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_register" />

    <com.example.jualbukuid.customview.CustomEditText
        android:id="@+id/et_hp_register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:hint="@string/masukan_no_hp_anda"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_register" />

    <com.example.jualbukuid.customview.CustomEditText
        android:id="@+id/et_email_register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hp_register" />

    <com.example.jualbukuid.customview.CustomEditText
        android:id="@+id/et_password_register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_shape"
        android:text="@string/tv_register"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_register" />

</androidx.constraintlayout.widget.ConstraintLayout>